--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-01  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
+
 2006-04-30  Daichi Kawahata <daichi@xfce.org>
 
 	* LINGUAS, pl.po: Added Polish translations by Piotr Malinski
