Updated Russian translations by   Anthony Ivanoff <a-i@bk.ru>,   Maxim Zenin <webmechanics@gmail.com>,   Sergey Fedoseev <fedoseev.sergey@gmail.com>.
(Old svn revision: 21420)

--- a/po/ru.po
+++ b/po/ru.po
@@ -2,14 +2,15 @@
 # Copyright (C) 2004-2006 os-cillation e.K.
 # This file is distributed under the same license as the exo package.
 # Andrey Fedoseev <andrey.fedoseev@gmail.com>, 2006.
+# Maxim Zenin <webmechanics@gmail.com>, 2006
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-19 17:57+0200\n"
-"PO-Revision-Date: 2006-04-15 18:33+0600\n"
-"Last-Translator: Andrey Fedoseev <andrey.fedoseev@gmail.com>\n"
+"PO-Revision-Date: 2006-04-26 16:32+0300\n"
+"Last-Translator: Maxim Zenin <webmechanics@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -74,87 +75,87 @@ msgstr ""
 
 #: ../exo/exo-icon-bar.c:322
 msgid "Active"
-msgstr ""
+msgstr "Активно"
 
 #: ../exo/exo-icon-bar.c:323
 msgid "Active item index"
-msgstr ""
+msgstr "Индекс активных элементов"
 
 #: ../exo/exo-icon-bar.c:329 ../exo/exo-icon-bar.c:330
 msgid "Active item fill color"
-msgstr ""
+msgstr "Цвет заливки активного элемента"
 
 #: ../exo/exo-icon-bar.c:336 ../exo/exo-icon-bar.c:337
 msgid "Active item border color"
-msgstr ""
+msgstr "Цветобводки активного элемента"
 
 #: ../exo/exo-icon-bar.c:343 ../exo/exo-icon-bar.c:344
 msgid "Active item text color"
-msgstr ""
+msgstr "Цвет текста активного элемента"
 
 #: ../exo/exo-icon-bar.c:350 ../exo/exo-icon-bar.c:351
 msgid "Cursor item fill color"
-msgstr ""
+msgstr "Цвет заливки курсора"
 
 #: ../exo/exo-icon-bar.c:357 ../exo/exo-icon-bar.c:358
 msgid "Cursor item border color"
-msgstr ""
+msgstr "Цвет обводки курсора"
 
 #: ../exo/exo-icon-bar.c:364 ../exo/exo-icon-bar.c:365
 msgid "Cursor item text color"
-msgstr ""
+msgstr "Цвет текста курсора"
 
 #: ../exo/exo-icon-view.c:659
 msgid "Column Spacing"
-msgstr ""
+msgstr "Отступ колонок"
 
 #: ../exo/exo-icon-view.c:660
 msgid "Space which is inserted between grid column"
-msgstr ""
+msgstr "Расстояние между колонками"
 
 #: ../exo/exo-icon-view.c:676
 msgid "Number of columns"
-msgstr ""
+msgstr "Количество колонок"
 
 #: ../exo/exo-icon-view.c:677
 msgid "Number of columns to display"
-msgstr ""
+msgstr "Количество отображаемых колонок"
 
 #: ../exo/exo-icon-view.c:691
 msgid "Enable Search"
-msgstr ""
+msgstr "Разрешить поиск"
 
 #: ../exo/exo-icon-view.c:692
 msgid "View allows user to search through columns interactively"
-msgstr ""
+msgstr "Разрешить пользователю интерактивный поиск в колонках"
 
 #: ../exo/exo-icon-view.c:709
 msgid "Width for each item"
-msgstr ""
+msgstr "Ширина каждого элемента"
 
 #: ../exo/exo-icon-view.c:710
 msgid "The width used for each item"
-msgstr ""
+msgstr "Ширина элементов"
 
 #: ../exo/exo-icon-view.c:728
 msgid "Layout mode"
-msgstr ""
+msgstr "Режим отображения"
 
 #: ../exo/exo-icon-view.c:729
 msgid "The layout mode"
-msgstr ""
+msgstr "Режим отображения"
 
 #: ../exo/exo-icon-view.c:745
 msgid "Margin"
-msgstr ""
+msgstr "Граница"
 
 #: ../exo/exo-icon-view.c:746
 msgid "Space which is inserted at the edges of the icon view"
-msgstr ""
+msgstr "Отступы от края иконок"
 
 #: ../exo/exo-icon-view.c:762
 msgid "Markup column"
-msgstr ""
+msgstr "Разметка колонок"
 
 #: ../exo/exo-icon-view.c:763
 msgid "Model column used to retrieve the text if using Pango markup"
@@ -171,7 +172,7 @@ msgstr ""
 #: ../exo/exo-icon-view.c:792
 msgid ""
 "How the text and icon of each item are positioned relative to each other"
-msgstr ""
+msgstr "Расположение текста и значков относительно друг друга"
 
 #: ../exo/exo-icon-view.c:824
 msgid "Reorderable"
@@ -183,15 +184,15 @@ msgstr ""
 
 #: ../exo/exo-icon-view.c:840
 msgid "Row Spacing"
-msgstr ""
+msgstr "Отступы строк"
 
 #: ../exo/exo-icon-view.c:841
 msgid "Space which is inserted between grid rows"
-msgstr ""
+msgstr "Отступы строк"
 
 #: ../exo/exo-icon-view.c:855
 msgid "Search Column"
-msgstr ""
+msgstr "Колонка поиска"
 
 #: ../exo/exo-icon-view.c:856
 msgid "Model column to search through when searching through item"
@@ -199,15 +200,15 @@ msgstr ""
 
 #: ../exo/exo-icon-view.c:870
 msgid "Selection mode"
-msgstr ""
+msgstr "Режим выделения"
 
 #: ../exo/exo-icon-view.c:871
 msgid "The selection mode"
-msgstr ""
+msgstr "Режим выделения"
 
 #: ../exo/exo-icon-view.c:886 ../exo/exo-tree-view.c:169
 msgid "Single Click"
-msgstr ""
+msgstr "Одиночный нажатие"
 
 #: ../exo/exo-icon-view.c:887 ../exo/exo-tree-view.c:170
 msgid "Whether the items in the view can be activated with single clicks"
@@ -215,114 +216,116 @@ msgstr ""
 
 #: ../exo/exo-icon-view.c:903 ../exo/exo-tree-view.c:186
 msgid "Single Click Timeout"
-msgstr ""
+msgstr "Таймаут одиночного клика"
 
 #: ../exo/exo-icon-view.c:904 ../exo/exo-tree-view.c:187
 msgid ""
 "The amount of time after which the item under the mouse cursor will be "
 "selected automatically in single click mode"
 msgstr ""
+"Промежуток времени в режиме одиночного клика, после которого элемент под "
+"курсором мыши будет выбран"
 
 #: ../exo/exo-icon-view.c:919
 msgid "Spacing"
-msgstr ""
+msgstr "Отступ"
 
 #: ../exo/exo-icon-view.c:920
 msgid "Space which is inserted between cells of an item"
-msgstr ""
+msgstr "Расстояние между ячейками"
 
 #: ../exo/exo-icon-view.c:943
 msgid "Selection Box Color"
-msgstr ""
+msgstr "Цвет окна выбора"
 
 #: ../exo/exo-icon-view.c:944
 msgid "Color of the selection box"
-msgstr ""
+msgstr "Цвет окна выбора"
 
 #: ../exo/exo-icon-view.c:950
 msgid "Selection Box Alpha"
-msgstr ""
+msgstr "Прозрачность окна выбора"
 
 #: ../exo/exo-icon-view.c:951
 msgid "Opacity of the selection box"
-msgstr ""
+msgstr "Прозрачность окна выбора"
 
 #: ../exo/exo-toolbars-editor-dialog.c:134
 msgid "_Add a new toolbar"
-msgstr ""
+msgstr "_Добавить новую панель"
 
 #: ../exo/exo-toolbars-editor.c:238
 msgid ""
 "Drag an item onto the toolbars above to add it, from the toolbars in the "
 "items table to remove it."
-msgstr ""
+msgstr "Перетащите элемент на панель для добавления и с панели для удаления"
 
 #: ../exo/exo-toolbars-editor.c:551
 msgid "Separator"
-msgstr ""
+msgstr "Разделитель"
 
 #: ../exo/exo-toolbars-view.c:768
 msgid "Toolbar _Style"
-msgstr ""
+msgstr "_Стиль панели инструментов"
 
 #: ../exo/exo-toolbars-view.c:775
 msgid "_Desktop Default"
-msgstr ""
+msgstr "_Рабочий стол по умолчанию"
 
 #: ../exo/exo-toolbars-view.c:784
 msgid "_Icons only"
-msgstr ""
+msgstr "Только _Значки"
 
 #: ../exo/exo-toolbars-view.c:793
 msgid "_Text only"
-msgstr ""
+msgstr "Только _Текст"
 
 #: ../exo/exo-toolbars-view.c:802
 msgid "Text for _All Icons"
-msgstr ""
+msgstr "Текст для _всех значков"
 
 #: ../exo/exo-toolbars-view.c:811
 msgid "Text for I_mportant Icons"
-msgstr ""
+msgstr "Текст для В_ажных значков"
 
 #: ../exo/exo-toolbars-view.c:819
 msgid "_Remove Toolbar"
-msgstr ""
+msgstr "_Удалить панель"
 
 #: ../exo/exo-toolbars-view.c:834
 msgid "Customize Toolbar..."
-msgstr ""
+msgstr "Настроить панель"
 
 #: ../exo/exo-url.c:283
 #, c-format
 msgid "Unable to open \"%s\""
-msgstr ""
+msgstr "Невозможно открыть  \"%s\""
 
 #: ../exo/exo-url.c:305
 #, c-format
 msgid "The URL \"%s\" is not supported"
-msgstr ""
+msgstr "URL \"%s\" не поддерживается"
 
 #: ../exo/exo-url.c:377
 #, c-format
 msgid "Failed to open \"%s\"."
-msgstr ""
+msgstr "Не удалось открыть \"%s\"."
 
 #: ../exo/exo-wrap-table.c:169
 msgid "Column spacing"
-msgstr ""
+msgstr "Отступы колонок"
 
 #: ../exo/exo-wrap-table.c:170
 msgid "The amount of space between two consecutive columns"
-msgstr ""
+msgstr "Расстояние между соседними колонками"
 
 #: ../exo/exo-wrap-table.c:184
 msgid "Row spacing"
-msgstr ""
+msgstr "Отступы строк"
 
 #: ../exo/exo-wrap-table.c:185
 msgid "The amount of space between two consecutive rows"
-msgstr ""
+msgstr "Расстояние между соседними строками"
 
 #: ../exo/exo-wrap-table.c:199
 msgid "Homogeneous"
@@ -334,7 +337,7 @@ msgstr ""
 
 #: ../exo/exo-xsession-client.c:152
 msgid "Window group"
-msgstr ""
+msgstr "Группа окон"
 
 #: ../exo/exo-xsession-client.c:153
 msgid "Window group leader"
@@ -342,45 +345,45 @@ msgstr ""
 
 #: ../exo/exo-xsession-client.c:163
 msgid "Restart command"
-msgstr ""
+msgstr "Команда перезапуска"
 
 #: ../exo/exo-xsession-client.c:164
 msgid "Session restart command"
-msgstr ""
+msgstr "Команда перезапуска сессии"
 
 #: ../exo-csource/main.c:230
 #, c-format
 msgid "Usage: %s [options] [file]\n"
-msgstr ""
+msgstr "Использование: %s [options] [file]\n"
 
 #: ../exo-csource/main.c:231
 #, c-format
 msgid "       %s [options] --build-list [[name file]...]\n"
-msgstr ""
+msgstr "       %s [опции] --build-list [[имя_файла]...]\n"
 
 #: ../exo-csource/main.c:233
 msgid "  -h, --help        Print this help message and exit\n"
-msgstr ""
+msgstr "  -h, --help        Вывод краткой справки\n"
 
 #: ../exo-csource/main.c:234
 msgid "  -v, --version     Print version information and exit\n"
-msgstr ""
+msgstr "  -v, --version     Вывод информации о версии ПО\n"
 
 #: ../exo-csource/main.c:235
 msgid "  --extern          Generate extern symbols\n"
-msgstr ""
+msgstr "  --extern          Генерировать extern символы\n"
 
 #: ../exo-csource/main.c:236
 msgid "  --static          Generate static symbols\n"
-msgstr ""
+msgstr "  --static          Генерировать статические символы\n"
 
 #: ../exo-csource/main.c:237
 msgid "  --name=identifier C macro/variable name\n"
-msgstr ""
+msgstr "  --name=identifier Имя переменной или функции С\n"
 
 #: ../exo-csource/main.c:238
 msgid "  --build-list      Parse (name, file) pairs\n"
-msgstr ""
+msgstr "  --build-list      Разбор пар \"имя-файл\"\n"
 
 #: ../exo-csource/main.c:248
 msgid ""
@@ -390,6 +393,11 @@ msgid ""
 "Written by Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 msgstr ""
+"Copyright (c) 2005\n"
+"        os-cillation e.K. Все права сохранены.\n"
+"\n"
+"Написано Benedikt Meurer <benny@xfce.org>.\n"
+"\n"
 
 #: ../exo-csource/main.c:251 ../exo-open/main.c:103
 #, c-format
@@ -400,6 +408,11 @@ msgid ""
 "%s source package.\n"
 "\n"
 msgstr ""
+"%s распространяется БЕЗ КАКОЙ_ЛИБО ГАРАНТИИ,\n"
+"разрешено распространение копий %s на условиях\n"
+"GNU Lesser General Public License, полный текст лицензии\n"
+"находится в пакете исходных кодов %s.\n"
+"\n"
 
 #: ../exo-csource/main.c:255 ../exo-open/main.c:107
 #, c-format
@@ -466,48 +479,48 @@ msgstr ""
 #: ../exo-helper/exo-helper-chooser-dialog.c:296
 #: ../exo-helper/exo-helper-launcher-dialog.c:260
 msgid "Failed to open the documentation browser."
-msgstr ""
+msgstr "Невозможно открыть ПО просмотра документации"
 
 #: ../exo-helper/exo-helper-chooser.c:177
 #: ../exo-helper/exo-helper-chooser.c:184
 msgid "Press left mouse button to change the selected application."
-msgstr ""
+msgstr "Нажмите левую кнопку мыши для смены приложения"
 
 #: ../exo-helper/exo-helper-chooser.c:183
 msgid "Application Chooser Button"
-msgstr ""
+msgstr "Кнопка выбора приложения"
 
 #: ../exo-helper/exo-helper-chooser.c:319
 msgid "No application selected"
-msgstr ""
+msgstr "Приложение не выбрано"
 
 #: ../exo-helper/exo-helper-chooser.c:335
 msgid "Failed to set default Web Browser"
-msgstr ""
+msgstr "Невозможно открыть ПО просмотра web"
 
 #: ../exo-helper/exo-helper-chooser.c:336
 msgid "Failed to set default Mail Reader"
-msgstr ""
+msgstr "Невозможно открыть ПО чтения электронной почты"
 
 #: ../exo-helper/exo-helper-chooser.c:337
 msgid "Failed to set default Terminal Emulator"
-msgstr ""
+msgstr "Невозможно открыть ПО терминала"
 
 #: ../exo-helper/exo-helper-chooser.c:401
 msgid "Select application"
-msgstr ""
+msgstr "Выбрать приложение"
 
 #: ../exo-helper/exo-helper-chooser.c:439
 msgid "Choose a custom Web Browser"
-msgstr ""
+msgstr "Выберите ПО просмотра web"
 
 #: ../exo-helper/exo-helper-chooser.c:440
 msgid "Choose a custom Mail Reader"
-msgstr ""
+msgstr "Выберите ПО чтения электронной почты"
 
 #: ../exo-helper/exo-helper-chooser.c:441
 msgid "Choose a custom Terminal Emulator"
-msgstr ""
+msgstr "Выберите ПО терминала"
 
 #: ../exo-helper/exo-helper-chooser.c:446
 msgid ""
@@ -736,6 +749,11 @@ msgid ""
 "Written by Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 msgstr ""
+"Copyright (c) 2005-2006\n"
+"        os-cillation e.K. Все права сохранены.\n"
+"\n"
+"Написано Benedikt Meurer <benny@xfce.org>.\n"
+"\n"
 
 #: ../exo-open/main.c:121
 #, c-format
