--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,7 @@
 2006-05-01  Daichi Kawahata <daichi@xfce.org>
 
+	* ru.po: Updated Russian translations by Maxim Zenin
+	  <webmechanics@gmail.com>.
 	* ja.po: Updated Japanese translations.
 
 2006-04-30  Daichi Kawahata <daichi@xfce.org>
