2006-05-02	Benedikt Meurer <benny@xfce.org>
	* exo/exo-icon-view.c, exo/exo-url.c: Apply patches from Oliver
	  Lehmann <oliver@freebsd.org> to fix the compilation on older
	  FreeBSD systems.




(Old svn revision: 21448)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-02	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c, exo/exo-url.c: Apply patches from Oliver
+	  Lehmann <oliver@freebsd.org> to fix the compilation on older
+	  FreeBSD systems.
+
 2006-05-01	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in, exo/exo-md5.c: RedHat/Fedora requires md5global.h
