Updated Polish translations by Piotr Malinski <admin@rk.edu.pl>.
(Old svn revision: 21474)

--- a/po/pl.po
+++ b/po/pl.po
@@ -228,6 +228,8 @@ msgid ""
 "The amount of time after which the item under the mouse cursor will be "
 "selected automatically in single click mode"
 msgstr ""
+"Opóźnienie czasowe, po którym element zostanie automatycznie zaznaczony "
+"przez stojący nad nim kursor myszy"
 
 #: ../exo/exo-icon-view.c:919
 msgid "Spacing"
@@ -235,100 +237,102 @@ msgstr "Odstęp"
 
 #: ../exo/exo-icon-view.c:920
 msgid "Space which is inserted between cells of an item"
-msgstr ""
+msgstr "Przestrzeń pomiędzy komórkami elementów"
 
 #: ../exo/exo-icon-view.c:943
 msgid "Selection Box Color"
-msgstr ""
+msgstr "Kolor pola wyboru"
 
 #: ../exo/exo-icon-view.c:944
 msgid "Color of the selection box"
-msgstr ""
+msgstr "Kolor pola wyboru"
 
 #: ../exo/exo-icon-view.c:950
 msgid "Selection Box Alpha"
-msgstr ""
+msgstr "Alpha pola wyboru"
 
 #: ../exo/exo-icon-view.c:951
 msgid "Opacity of the selection box"
-msgstr ""
+msgstr "Nieprzezroczystość pola wyboru"
 
 #: ../exo/exo-toolbars-editor-dialog.c:134
 msgid "_Add a new toolbar"
-msgstr ""
+msgstr "_Dodaj nowy pasek narzędzi"
 
 #: ../exo/exo-toolbars-editor.c:238
 msgid ""
 "Drag an item onto the toolbars above to add it, from the toolbars in the "
 "items table to remove it."
 msgstr ""
+"Przeciągnij jeden z powyższych elementów na pasek narzędzi aby go dodać, "
+"lub z paska narzędzi na listę elementów, aby usunąć."
 
 #: ../exo/exo-toolbars-editor.c:551
 msgid "Separator"
-msgstr ""
+msgstr "Separator"
 
 #: ../exo/exo-toolbars-view.c:768
 msgid "Toolbar _Style"
-msgstr ""
+msgstr "_Styl paska narzędzi"
 
 #: ../exo/exo-toolbars-view.c:775
 msgid "_Desktop Default"
-msgstr ""
+msgstr "_Domyślny pulpitu"
 
 #: ../exo/exo-toolbars-view.c:784
 msgid "_Icons only"
-msgstr ""
+msgstr "Tylko _ikony"
 
 #: ../exo/exo-toolbars-view.c:793
 msgid "_Text only"
-msgstr ""
+msgstr "Tylko _tekst"
 
 #: ../exo/exo-toolbars-view.c:802
 msgid "Text for _All Icons"
-msgstr ""
+msgstr "Tekst pod wszystkimi ikon_ami"
 
 #: ../exo/exo-toolbars-view.c:811
 msgid "Text for I_mportant Icons"
-msgstr ""
+msgstr "Tekst pod ważny_mi ikonami"
 
 #: ../exo/exo-toolbars-view.c:819
 msgid "_Remove Toolbar"
-msgstr ""
+msgstr "_Usuń pasek narzędzi"
 
 #: ../exo/exo-toolbars-view.c:834
 msgid "Customize Toolbar..."
-msgstr ""
+msgstr "Dostosuj pasek narzędzi..."
 
 #: ../exo/exo-url.c:283
 #, c-format
 msgid "Unable to open \"%s\""
-msgstr ""
+msgstr "Nie można otworzyć \"%s\""
 
 #: ../exo/exo-url.c:305
 #, c-format
 msgid "The URL \"%s\" is not supported"
-msgstr ""
+msgstr "URL \"%s\" nie jest wspierany"
 
 #: ../exo/exo-url.c:377
 #, c-format
 msgid "Failed to open \"%s\"."
-msgstr ""
+msgstr "Nie udało się otworzyć \"%s\"."
 
 #: ../exo/exo-wrap-table.c:169
 msgid "Column spacing"
-msgstr ""
+msgstr "Odstęp między kolumnami"
 
 #: ../exo/exo-wrap-table.c:170
 msgid "The amount of space between two consecutive columns"
-msgstr ""
+msgstr "Odstęp pomiędzy dwoma sąsiednimi kolumnami"
 
 #: ../exo/exo-wrap-table.c:184
 msgid "Row spacing"
-msgstr ""
+msgstr "Odstęp między wierszami"
 
 #: ../exo/exo-wrap-table.c:185
 msgid "The amount of space between two consecutive rows"
-msgstr ""
+msgstr "Odstęp pomiędzy dwoma sąsiednimi wierszami"
 
 #: ../exo/exo-wrap-table.c:199
 msgid "Homogeneous"
@@ -340,15 +344,15 @@ msgstr ""
 
 #: ../exo/exo-xsession-client.c:152
 msgid "Window group"
-msgstr ""
+msgstr "Grupa okien"
 
 #: ../exo/exo-xsession-client.c:153
 msgid "Window group leader"
-msgstr ""
+msgstr "Przewodnie okno grupy"
 
 #: ../exo/exo-xsession-client.c:163
 msgid "Restart command"
-msgstr ""
+msgstr "Uruchom ponownie polecenie"
 
 #: ../exo/exo-xsession-client.c:164
 msgid "Session restart command"
@@ -357,36 +361,36 @@ msgstr ""
 #: ../exo-csource/main.c:230
 #, c-format
 msgid "Usage: %s [options] [file]\n"
-msgstr ""
+msgstr "Użycie: %s [opcje] [plik]\n"
 
 #: ../exo-csource/main.c:231
 #, c-format
 msgid "       %s [options] --build-list [[name file]...]\n"
-msgstr ""
+msgstr "       %s [opcje] --build-list [[nazwa pliku]...]\n"
 
 #: ../exo-csource/main.c:233
 msgid "  -h, --help        Print this help message and exit\n"
-msgstr ""
+msgstr "  -h, --help        Wyświetl komunikat pomocy i wyjdź\n"
 
 #: ../exo-csource/main.c:234
 msgid "  -v, --version     Print version information and exit\n"
-msgstr ""
+msgstr "  -v, --version     Wyświetl informacje o wersji i wyjdź\n"
 
 #: ../exo-csource/main.c:235
 msgid "  --extern          Generate extern symbols\n"
-msgstr ""
+msgstr "  --extern          Generuj zewnętrzne symbole\n"
 
 #: ../exo-csource/main.c:236
 msgid "  --static          Generate static symbols\n"
-msgstr ""
+msgstr "  --static          Generuj statyczne symbole\n"
 
 #: ../exo-csource/main.c:237
 msgid "  --name=identifier C macro/variable name\n"
-msgstr ""
+msgstr "  --name=identifier Nazwa makra lub zmiennej języka C\n"
 
 #: ../exo-csource/main.c:238
 msgid "  --build-list      Parse (name, file) pairs\n"
-msgstr ""
+msgstr "  --build-list      Parsuj pary (nazwa, plik)\n"
 
 #: ../exo-csource/main.c:248
 msgid ""
@@ -396,6 +400,11 @@ msgid ""
 "Written by Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 msgstr ""
+"Copyright (c) 2005\n"
+"        os-cillation e.K. Wszelkie prawa zastrzeżone.\n"
+"\n"
+"Napisane przez Benedikta Meurera <benny@xfce.org>.\n"
+"\n"
 
 #: ../exo-csource/main.c:251 ../exo-open/main.c:103
 #, c-format
@@ -410,166 +419,184 @@ msgstr ""
 #: ../exo-csource/main.c:255 ../exo-open/main.c:107
 #, c-format
 msgid "Please report bugs to <%s>.\n"
-msgstr ""
+msgstr "Błędy proszę zgłaszać do <%s>.\n"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:120
 #: ../exo-helper/exo-helper-chooser-dialog.c:129
 msgid "Preferred Applications"
-msgstr ""
+msgstr "Preferowane aplikacje"
 
 #.
 #. Internet
 #.
 #: ../exo-helper/exo-helper-chooser-dialog.c:148
 msgid "Internet"
-msgstr ""
+msgstr "Internet"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:161
 msgid "Default Web Browser"
-msgstr ""
+msgstr "Domyślna przeglądarka WWW"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:169
 msgid ""
 "The preferred Web Browser will be used to open\n"
 "hyperlinks and display help contents."
 msgstr ""
+"Preferowana przeglądarka WWW używana do otwierania\n"
+"hiperłączy i wyświetlania zawartości pomocy."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:193
 msgid "Default Mail Reader"
-msgstr ""
+msgstr "Domyślny program pocztowy"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:201
 msgid ""
 "The preferred Mail Reader will be used to compose\n"
 "emails when you click on email addresses."
 msgstr ""
+"Preferowany czytnik poczty używany do pisania\n"
+"wiadomości e-mail, przy kliknięciu na adres e-mail."
 
 #.
 #. Utilities
 #.
 #: ../exo-helper/exo-helper-chooser-dialog.c:221
 msgid "Utilities"
-msgstr ""
+msgstr "Narzędzia"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:234
 msgid "Default Terminal Emulator"
-msgstr ""
+msgstr "Domyślny emulator terminala"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:242
 msgid ""
 "The preferred Terminal Emulator will be used to\n"
 "run commands that require a CLI environment."
 msgstr ""
+"Preferowany emulator terminala będzie używany\n"
+"do uruchamiania poleceń, wymagających środowiska CLI."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:296
 #: ../exo-helper/exo-helper-launcher-dialog.c:260
 msgid "Failed to open the documentation browser."
-msgstr ""
+msgstr "Nie udało się otworzyć przeglądarki dokumentacji."
 
 #: ../exo-helper/exo-helper-chooser.c:177
 #: ../exo-helper/exo-helper-chooser.c:184
 msgid "Press left mouse button to change the selected application."
-msgstr ""
+msgstr "Naciśnij lewy klawisz myszy, aby zmienić wybraną aplikację."
 
 #: ../exo-helper/exo-helper-chooser.c:183
 msgid "Application Chooser Button"
-msgstr ""
+msgstr "Przycisk wybierania aplikacji"
 
 #: ../exo-helper/exo-helper-chooser.c:319
 msgid "No application selected"
-msgstr ""
+msgstr "Brak wybranej aplikacji"
 
 #: ../exo-helper/exo-helper-chooser.c:335
 msgid "Failed to set default Web Browser"
-msgstr ""
+msgstr "Nie udało się ustawić domyślnej przeglądarki WWW"
 
 #: ../exo-helper/exo-helper-chooser.c:336
 msgid "Failed to set default Mail Reader"
-msgstr ""
+msgstr "Nie udało się ustawić domyślnego programu pocztowego"
 
 #: ../exo-helper/exo-helper-chooser.c:337
 msgid "Failed to set default Terminal Emulator"
-msgstr ""
+msgstr "Nie udało się ustawić domyślnego emulatora terminala"
 
 #: ../exo-helper/exo-helper-chooser.c:401
 msgid "Select application"
-msgstr ""
+msgstr "Wybierz aplikację"
 
 #: ../exo-helper/exo-helper-chooser.c:439
 msgid "Choose a custom Web Browser"
-msgstr ""
+msgstr "Wybierz inną przeglądarkę WWW"
 
 #: ../exo-helper/exo-helper-chooser.c:440
 msgid "Choose a custom Mail Reader"
-msgstr ""
+msgstr "Wybierz inny program pocztowy"
 
 #: ../exo-helper/exo-helper-chooser.c:441
 msgid "Choose a custom Terminal Emulator"
-msgstr ""
+msgstr "Wybierz inny emulator terminala"
 
 #: ../exo-helper/exo-helper-chooser.c:446
 msgid ""
 "Specify the application you want to use\n"
 "as default Web Browser for Xfce:"
 msgstr ""
+"Wybierz aplikację, jakiej chcesz używać\n"
+"jako domyślnej przeglądarki WWW w Xfce:"
 
 #: ../exo-helper/exo-helper-chooser.c:447
 msgid ""
 "Specify the application you want to use\n"
 "as default Mail Reader for Xfce:"
 msgstr ""
+"Wybierz aplikację, jakiej chcesz używać\n"
+"jako domyślnego programu pocztowego w Xfce:"
 
 #: ../exo-helper/exo-helper-chooser.c:448
 msgid ""
 "Specify the application you want to use\n"
 "as default Terminal Emulator for Xfce:"
 msgstr ""
+"Wybierz aplikację, jakiej chcesz używać\n"
+"jako domyślnego emulatora terminala w Xfce:"
 
 #: ../exo-helper/exo-helper-chooser.c:512
 msgid "Browse the file system to choose a custom command."
-msgstr ""
+msgstr "Przeglądaj system plików w celu wybrania polecenia."
 
 #: ../exo-helper/exo-helper-chooser.c:687
 msgid "_Other..."
-msgstr ""
+msgstr "_Inne..."
 
 #: ../exo-helper/exo-helper-chooser.c:688
 msgid "Use a custom application which is not included in the above list."
-msgstr ""
+msgstr "Użyj innej aplikacji, która nie znajduje się na powyższej liście."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:143
 msgid "Choose Preferred Application"
-msgstr ""
+msgstr "Wybierz preferowaną aplikację"
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:319
 msgid ""
 "Please choose your preferred Web\n"
 "Browser now and click OK to proceed."
 msgstr ""
+"Proszę wybrać preferowaną przeglądarkę\n"
+"WWW i kliknąć OK, aby kontynuować."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:321
 msgid ""
 "Please choose your preferred Mail Reader\n"
 "now and click OK to proceed."
 msgstr ""
+"Proszę wybrać preferowany program pocztowy\n"
+"i kliknąć OK, aby kontynuować."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:323
 msgid ""
 "Please choose your preferred Terminal\n"
 "Emulator now and click OK to proceed."
 msgstr ""
+"Proszę wybrać preferowany emulator\n"
+"terminala i kliknąć OK, aby kontynuować."
 
 #: ../exo-helper/exo-helper.c:404
 msgid "No command specified"
-msgstr ""
+msgstr "Nie określono polecenia"
 
 #: ../exo-helper/exo-helper.c:740
 msgid "Failed to open helpers.rc for writing"
-msgstr ""
+msgstr "Nie udało się otworzyć pliku helpers.rc do zapisu"
 
 #: ../exo-helper/exo-preferred-applications-settings.c:40
 msgid "Failed to launch exo-preferred-applications"
-msgstr ""
+msgstr "Nie udało się uruchomić preferowanych aplikacji exo"
 
 #: ../exo-helper/exo-preferred-applications-settings.c:60
 msgid "Button Label|Preferred Applications"
@@ -577,92 +604,94 @@ msgstr ""
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
-msgstr ""
+msgstr "Terminal Xfce"
 
 #: ../exo-helper/helpers/balsa.desktop.in.h:1
 msgid "Balsa"
-msgstr ""
+msgstr "Balsa"
 
 #: ../exo-helper/helpers/debian-sensible-browser.desktop.in.h:1
 msgid "Debian Sensible Browser"
-msgstr ""
+msgstr "Debian Sensible Browser"
 
 #: ../exo-helper/helpers/debian-x-terminal-emulator.desktop.in.h:1
 msgid "Debian X Terminal Emulator"
-msgstr ""
+msgstr "Debian X Terminal Emulator"
 
 #: ../exo-helper/helpers/epiphany.desktop.in.h:1
 msgid "Epiphany Web Browser"
-msgstr ""
+msgstr "Przeglądarka internetowa Epiphany"
 
 #: ../exo-helper/helpers/eterm.desktop.in.h:1
 msgid "Enlightened Terminal Emulator"
-msgstr ""
+msgstr "Enlightened Terminal Emulator"
 
 #: ../exo-helper/helpers/evolution.desktop.in.h:1
 msgid "Novell Evolution"
-msgstr ""
+msgstr "Novell Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.h:1
 msgid "Mozilla Firefox"
-msgstr ""
+msgstr "Mozilla Firefox"
 
 #: ../exo-helper/helpers/galeon.desktop.in.h:1
 msgid "Galeon Web Browser"
-msgstr ""
+msgstr "Przeglądarka internetowa Galeon"
 
 #: ../exo-helper/helpers/gnome-terminal.desktop.in.h:1
 msgid "GNOME Terminal"
-msgstr ""
+msgstr "GNOME Terminal"
 
 #: ../exo-helper/helpers/kmail.desktop.in.h:1
 msgid "KMail"
-msgstr ""
+msgstr "KMail"
 
 #: ../exo-helper/helpers/konqueror.desktop.in.h:1
 msgid "Konqueror Web Browser"
-msgstr ""
+msgstr "Przeglądarka internetowa Konqueror"
 
 #: ../exo-helper/helpers/mozilla-browser.desktop.in.h:1
 msgid "Mozilla Browser"
-msgstr ""
+msgstr "Mozilla Browser"
 
 #: ../exo-helper/helpers/mozilla-mailer.desktop.in.h:1
 msgid "Mozilla Mail"
-msgstr ""
+msgstr "Mozilla Mail"
 
 #: ../exo-helper/helpers/opera-browser.desktop.in.h:1
 msgid "Opera Browser"
-msgstr ""
+msgstr "Opera Browser"
 
 #: ../exo-helper/helpers/opera-mailer.desktop.in.h:1
 msgid "Opera Mail"
-msgstr ""
+msgstr "Opera Mail"
 
 #: ../exo-helper/helpers/thunderbird.desktop.in.h:1
 msgid "Mozilla Thunderbird"
-msgstr ""
+msgstr "Mozilla Thunderbird"
 
 #: ../exo-helper/helpers/xterm.desktop.in.h:1
 msgid "X Terminal"
-msgstr ""
+msgstr "Terminal X"
 
 #: ../exo-open/main.c:43
 msgid "Usage: exo-open [URLs...]"
-msgstr ""
+msgstr "Użycie: exo-open [URLe...]"
 
 #: ../exo-open/main.c:44
 msgid "       exo-open --launch TYPE [PARAMETERs...]"
-msgstr ""
+msgstr "       exo-open --launch TYP [PARAMETRY...]"
 
 #: ../exo-open/main.c:46
 msgid "  -h, --help                          Print this help message and exit"
 msgstr ""
+"  -h, --help                          Wyświetl komunikat pomocy i wyjdź"
 
 #: ../exo-open/main.c:47
 msgid ""
 "  -v, --version                       Print version information and exit"
 msgstr ""
+"  -v, --version                       Wyświetl informacje o wersji i wyjdź"
 
 #: ../exo-open/main.c:49
 msgid ""
@@ -671,10 +700,14 @@ msgid ""
 "where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
+"  --launch TYP [PARAMETRY...]         Uruchom preferowaną aplikacją dla\n"
+"                                      typu TYP z opcjonalnymi PARAMETRAMI,\n"
+"                                      gdzie TYP jest jedną z poniższych\n"
+"                                      wartości."
 
 #: ../exo-open/main.c:53
 msgid "The following TYPEs are supported for the --launch command:"
-msgstr ""
+msgstr "Poniższe TYPy nie są obsługiwane przez polecenie --launch:"
 
 #. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
@@ -685,6 +718,9 @@ msgid ""
 "  MailReader       - The preferred Mail Reader.\n"
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
+"  WebBrowser       - Preferowana przeglądarka WWW.\n"
+"  MailReader       - Preferowany czytnik poczty.\n"
+"  TerminalEmulator - Preferowany emulator terminala."
 
 #: ../exo-open/main.c:63
 msgid ""
@@ -694,6 +730,12 @@ msgid ""
 "pass additional parameters to the application (i.e. for TerminalEmulator\n"
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
+"Jeśli nie określisz opcji --launch, exo-open automatycznie otworzy\n"
+"wszystkie podane URLe za pomocą ich domyślnych aplikacji. Jeśli jednak\n"
+"podasz opcję --launch, możesz wybrać, której z preferowanych aplikacji\n"
+"chcesz użyć i przekazać dodatkowe parametry do apllikacji, np. dla\n"
+"TerminalEmulator możesz podać polecenie, które ma zostać uruchomione\n"
+"wewnątrz terminala."
 
 #: ../exo-open/main.c:100
 msgid ""
@@ -703,13 +745,18 @@ msgid ""
 "Written by Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 msgstr ""
+"Copyright (c) 2005-2006\n"
+"        os-cillation e.K. Wszelkie prawa zastrzeżone.\n"
+"\n"
+"Napisane przez Benedikta Meurera <benny@xfce.org>.\n"
+"\n"
 
 #: ../exo-open/main.c:121
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
-msgstr ""
+msgstr "Nie udało się uruchomić domyślnej aplikacji dla kategorii \"%s\"."
 
 #: ../exo-open/main.c:144
 #, c-format
 msgid "Failed to open URL \"%s\"."
-msgstr ""
+msgstr "Nie udało się otworzyć URLa \"%s\"."
