--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-04  Daichi Kawahata <daichi@xfce.org>
+
+	* pl.po: Updated Polish translations by Piotr Malinski
+	  <admin@rk.edu.pl>.
+
 2006-05-01  Daichi Kawahata <daichi@xfce.org>
 
 	* ru.po: Updated Russian translations by Maxim Zenin
